--- a/css/shrine-list.css
+++ b/css/shrine-list.css
@@ -58,6 +58,12 @@ main {
   transition: all 0.6s ease;
 }
 
+a.shrine-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
 .shrine.active {
   transform: translateY(0);
   opacity: 1;
