--- a/css/shrine-list.css
+++ b/css/shrine-list.css
@@ -71,6 +71,8 @@ a.shrine-link {
 
 .shrine img {
   width: 100%;
+  height: 200px;
+  object-fit: cover;
   border-radius: 12px;
   transition: transform 0.4s;
 }
