--- a/css/shrine-detail.css
+++ b/css/shrine-detail.css
@@ -6,16 +6,40 @@ body {
 }
 
 header {
-  background: #b3001b;
+  background: #e60033;
   color: white;
   text-align: center;
-  padding: 1.5em;
+  padding: 2em 1em 1em;
+  position: relative;
+  overflow: hidden;
 }
 
-h1 {
-  font-size: 2em;
+.header-content h1 {
+  font-size: 2.5em;
   margin: 0;
 }
+
+.wave {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background: radial-gradient(circle at 50% 0%, #fff8f0 20%, transparent 21%);
+  background-size: 40px 40px;
+  background-repeat: repeat-x;
+  animation: waveAnim 5s linear infinite;
+}
+
+@keyframes waveAnim {
+  0% { background-position-x: 0; }
+  100% { background-position-x: 40px; }
+}
+
+header a {
+  color: inherit;
+  text-decoration: none;
+}
+
 
 main {
   padding: 2em;
