--- a/css/shrine-list.css
+++ b/css/shrine-list.css
@@ -14,6 +14,11 @@ header {
   overflow: hidden;
 }
 
+header a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .header-content h1 {
   font-size: 2.5em;
   margin: 0;
