--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ header h1 {
 }
 
 #clickable-title {
-  cursor: pointer; /* 手の形になるだけ */
+  cursor: pointer;
 }
 
 .sub {
@@ -72,7 +72,7 @@ header h1 {
 .omikuji-area {
   margin: 0px 0;
   padding-top: 0;
-  min-height: 300px; /* ← 追加 */
+  min-height: 300px;
 }
 
 .omikuji-area-title{
